--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.19.0",
     "config": "^3.1.0",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
