--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "config": "^3.1.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "swagger-ui-express": "^4.0.5"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
