--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Back end for sportsfeed-react",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "test": "mocha tests/**/*Tests.js",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -15,6 +15,8 @@
     "body-parser": "^1.19.0",
     "config": "^3.1.0",
     "express": "^4.17.1",
+    "express-redis-cache": "^1.1.3",
+    "mongoose": "^5.5.11",
     "nodemon": "^1.19.1",
     "request": "^2.88.0",
     "swagger-ui-express": "^4.0.5"
@@ -22,7 +24,11 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3"
+    "eslint-plugin-import": "^2.17.3",
+    "mocha": "^6.1.4",
+    "should": "^13.2.3",
+    "sinon": "^7.3.2",
+    "supertest": "^4.0.2"
   },
   "nodemonConfig": {
     "restartable": "rs",
